added media query

--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="app-container">
             <div class="header">
-                <img src="./../images/1.png" width="150px" height="100px" class="logo" />
+                <img src="./../images/1.png" class="logo" />
                 <p class="app-heading">TEXT COMPARATOR</p>
                 <ul>
                     <li><a href="./../index.html">Home</a></li>
