--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
                 <img src="./../images/1.png" width="150px" height="100px" class="logo" />
                 <p class="login-heading">TEXT COMPARATOR</p>
             </div>
-            <div>
+            <div class="login-input-container">
                 <h3>Login</h3>
                 <input type="email" class="input-login" placeholder="email" required="true" />
                 <input type="password" class="input-login" placeholder="password" required="true" />
